# Tecleados-ESP-Firmware

./: .gitignore  COMM_PROTOCOL.md  README.md  build_run.bat  partitions.csv  sdkconfig
components/ble_module/: BLE_MODULE.md  CMakeLists.txt  ble_hid_service.c  blemod.c
components/ble_module/include/: ble_hid_service.h  blemod.h
components/button_module/: button.c
components/config_module/: CMakeLists.txt  CONFIG_MODULE.md  cfg_ble.c  cfg_custom_keys.c  cfg_layouts.c  cfg_macros.c  cfg_physical.c  cfg_system.c  cfgmod.c
components/config_module/include/: cfg_ble.h  cfg_custom_keys.h  cfg_layouts.h  cfg_macros.h  cfg_physical.h  cfg_storage_keys.h  cfg_system.h  cfgmod.h
components/event_bus/: CMakeLists.txt  event_bus.c
components/keyboard/: CMakeLists.txt  KEYBOARD_MODULE.md  kb_bitmap.h  kb_custom_key.c  kb_layout.c  kb_macro.c  kb_manager.c  kb_matrix.c  kb_report.c  kb_state.c  kb_system_action.c
components/rgb_module/: CMakeLists.txt  rgb.c
components/status_module/: CMakeLists.txt  statusmod.c
components/usb_module/: CMakeLists.txt  USB_MODULE.md  usb_callbacks.c  usb_callbacks_rx.c  usb_callbacks_tx.c  usb_crc.c  usb_send.c  usbmod.c
components/utils/: basic_utils.h
configurator/: CONFIGURATOR.md  package-lock.json  package.json
configurator/src/: App.css  App.tsx  CustomKeysDashboard.tsx  HIDService.ts  KeyDefinitions.ts  KeyboardLayoutEditor.tsx  MacrosDashboard.tsx  SearchableKeyModal.tsx  StatusWidget.tsx  extra_styles.css  index.css  main.tsx
main/: CMakeLists.txt  ble_controller.c  ble_controller.h  main.c
tools/: hid_hello_test.py
(+45 files in other folders)
